// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/helm-requirements/extract extractPackageFile() parses simple requirements.yaml correctly 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": Array [
        "https://charts.helm.sh/stable/",
      ],
    },
    Object {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "registryUrls": Array [
        "https://charts.helm.sh/stable/",
      ],
    },
  ],
}
`;

exports[`manager/helm-requirements/extract extractPackageFile() resolves aliased registry urls 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": Array [
        "https://my-registry.gcr.io/",
      ],
    },
    Object {
      "currentValue": "1.0.0",
      "depName": "example",
      "registryUrls": Array [
        "https://registry.example.com/",
      ],
    },
  ],
}
`;

exports[`manager/helm-requirements/extract extractPackageFile() skips invalid registry urls 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": Array [
        "@placeholder",
      ],
      "skipReason": "placeholder-url",
    },
    Object {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "registryUrls": Array [
        "nope",
      ],
      "skipReason": "invalid-url",
    },
    Object {
      "currentValue": "0.8.1",
      "depName": "broken",
      "skipReason": "no-repository",
    },
  ],
}
`;

exports[`manager/helm-requirements/extract extractPackageFile() skips local dependencies 1`] = `
Object {
  "datasource": "helm",
  "deps": Array [
    Object {
      "currentValue": "0.9.0",
      "depName": "redis",
      "registryUrls": Array [
        "https://charts.helm.sh/stable/",
      ],
    },
    Object {
      "currentValue": "0.8.1",
      "depName": "postgresql",
      "registryUrls": Array [
        "file:///some/local/path/",
      ],
      "skipReason": "local-dependency",
    },
  ],
}
`;
